Fix css (#798) [PanCan | Mobile] Cancer names were cut off

--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -459,3 +459,19 @@ select:disabled {
 .mat-checkbox-frame {
     border-color: $checkbox-color !important;
 }
+
+@media screen and (max-width: $mobile-breakpoint) {
+    // autocomplete-picklist-question
+    .autoCompletePanel {
+        .mat-option {
+            white-space: normal;
+            height: auto;
+            border-top: 1px solid #d2d2d2;
+
+            &:last-of-type {
+                border-bottom: 1px solid #d2d2d2;
+            }
+        }
+    }
+}
+
